z-index fix for resume section not loading fully on Chrome Android

--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -11,6 +11,7 @@ body {
     text-decoration: none;
     position: relative;
     animation: fadepulse 3s linear infinite;
+    z-index: 1;
 
     &:after {
       content: "";
